--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
   "description": "",
   "dependencies": {
     "@types/cors": "^2.8.19",
+    "@types/multer": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
